Animation on searching page

--- a/TPE5-diazpace_molleker_lucero/html/buscado.html
+++ b/TPE5-diazpace_molleker_lucero/html/buscado.html
@@ -30,11 +30,11 @@
             <div class="filtro">Artistas</div>
             <div class="filtro">Podcast</div>
         </section>
-        <section class="music-content border">
+        <section class="music-content border swing-in-top-fwd">
             <div class="songs song2 song-search"></div>
             <section class="song-info">
                 <p class="p-info">Hey you - Pink Floyd</p>
-                <p>5.3 min</p>
+                <p class="p-info">5.3 min</p>
             </section>
                     <section class="actions">
                         <div class="action action1"></div>
@@ -42,7 +42,7 @@
                         <div class="action action3"></div>
                     </section>
         </section>
-        <section class="music-content border">
+        <section class="music-content border swing-in-top-fwd1">
             <div class="songs song4 song-search"></div>
             <section class="song-info">
                 <p class="p-info">Café la humedad - Cacho Castaña</p>
@@ -54,7 +54,7 @@
                         <div class="action action3"></div>
                     </section>
         </section>
-        <section class="music-content border">
+        <section class="music-content border swing-in-top-fwd2">
             <div class="songs song3 song-search"></div>
             <section class="song-info">
                 <p class="p-info">I want to be free - Freddy Mercury</p>
@@ -66,7 +66,7 @@
                         <div class="action action3"></div>
                     </section>
         </section>
-        <section class="music-content border">
+        <section class="music-content border swing-in-top-fwd3">
             <div class="songs song1 song-search"></div>
             <section class="song-info">
                 <p class="p-info">Radio gaga - Queen</p>
@@ -78,7 +78,7 @@
                         <div class="action action3"></div>
                     </section>
         </section>
-        <section class="music-content border">
+        <section class="music-content border swing-in-top-fwd4">
             <div class="songs song1 song-search"></div>
             <section class="song-info">
                 <p class="p-info">Beat it - Michael Jackson</p>
@@ -90,6 +90,68 @@
                         <div class="action action3"></div>
                     </section>
         </section>
+        <div class="bloque2">
+            <section class="music-content border swing-in-top-fwd">
+                <div class="songs song2 song-search"></div>
+                <section class="song-info">
+                    <p class="p-info">Hey you - Pink Floyd</p>
+                    <p class="p-info">5.3 min</p>
+                </section>
+                        <section class="actions">
+                            <div class="action action1"></div>
+                            <div class="action action2"></div>
+                            <div class="action action3"></div>
+                        </section>
+            </section>
+            <section class="music-content border swing-in-top-fwd1">
+                <div class="songs song4 song-search"></div>
+                <section class="song-info">
+                    <p class="p-info">Café la humedad - Cacho Castaña</p>
+                    <p>4.5 min</p>
+                </section>
+                        <section class="actions">
+                            <div class="action action1"></div>
+                            <div class="action action2"></div>
+                            <div class="action action3"></div>
+                        </section>
+            </section>
+            <section class="music-content border swing-in-top-fwd2">
+                <div class="songs song3 song-search"></div>
+                <section class="song-info">
+                    <p class="p-info">I want to be free - Freddy Mercury</p>
+                    <p>3.5 min</p>
+                </section>
+                        <section class="actions">
+                            <div class="action action1"></div>
+                            <div class="action action2"></div>
+                            <div class="action action3"></div>
+                        </section>
+            </section>
+            <section class="music-content border swing-in-top-fwd3">
+                <div class="songs song1 song-search"></div>
+                <section class="song-info">
+                    <p class="p-info">Radio gaga - Queen</p>
+                    <p>6.1 min</p>
+                </section>
+                        <section class="actions">
+                            <div class="action action1"></div>
+                            <div class="action action2"></div>
+                            <div class="action action3"></div>
+                        </section>
+            </section>
+            <section class="music-content border swing-in-top-fwd4">
+                <div class="songs song1 song-search"></div>
+                <section class="song-info">
+                    <p class="p-info">Beat it - Michael Jackson</p>
+                    <p>5.8 min</p>
+                </section>
+                        <section class="actions">
+                            <div class="action action1"></div>
+                            <div class="action action2"></div>
+                            <div class="action action3"></div>
+                        </section>
+            </section>
+        </div>
     </section>
     <div class="mas-canciones"></div>
     <div class="espacio-blanco"></div>
