--- a/TPE5-diazpace_molleker_lucero/html/cancion.html
+++ b/TPE5-diazpace_molleker_lucero/html/cancion.html
@@ -33,7 +33,11 @@
             <a href=""><p class="span"> - Smooth Criminal</p></a>        
         </section>
 
-        <section class="iconos"></section>
+        <section class="actions">
+            <div class="action action1"></div>
+            <div class="action action2"></div>
+            <div class="action action3"></div>
+        </section>
 
         <form id="form">
             <p class="clasificacion">
@@ -50,16 +54,27 @@
             </p>
         </form>   
      </article>
+     <embed height="60" type="audio/midi" width="144" src="/audio/Smooth Criminal.mp3" volume="60" loop="false" autostart="false" />
 
      <div class="espacio-blanco"></div>
 
-    <section class="player">        
-        <!--reproductor del navegador-->
-        <audio controls="controls" class="barra">
-            <!--<source src="track.ogg" type="audio/ogg" />-->
-            <source src="/audio/Smooth Criminal.mp3" type="audio/mp3" />
 
-        </audio>
+
+    <section class="player"> 
+        <section class="artista">
+            <a href=""><h1>Michael Jackson </h1></a> 
+            <a href=""><p class="span"> - Smooth Criminal</p></a>        
+        </section>
+
+        <section  class="artista">
+
+            <!--reproductor del navegador-->
+            <audio controls="controls" class="barra">
+                <!--<source src="track.ogg" type="audio/ogg" />-->
+                <source src="/audio/Smooth Criminal.mp3" type="audio/mp3" />
+            </audio>
+        </section>
+             
     </section>
     
 </body>
