--- a/TPE5-diazpace_molleker_lucero/html/playlist.html
+++ b/TPE5-diazpace_molleker_lucero/html/playlist.html
@@ -20,7 +20,7 @@
         </section>
     </header>
 
-    <section class="content">
+    <article class="content">
         <div class="back"></div>
         
             <article>
@@ -218,8 +218,6 @@
             </audio>
         </section>
              
-    </section>
-
     </section>
 
     <script src="../js/puntuacion.js"></script>
