--- a/TPE5-diazpace_molleker_lucero/html/actualizar-plan.html
+++ b/TPE5-diazpace_molleker_lucero/html/actualizar-plan.html
@@ -29,29 +29,37 @@
             <p id="texto-plan"> Tu plan actual es: </p> <input id="tu-plan-es" type="text" placeholder="FREE">
         </div>
         <section class="planes">
-            <div class="plan1"></div>
-            <div class="plan2"></div>
-            <div class="plan3"></div>
-            <div class="plan4"></div>
-        </section>
-        <div class="flex">
-            <div>
-            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan</a></button>
-            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan</a></button>
-            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan</a></button>
-            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan</a></button>
+            <div class="plan1"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
             </div>
-        </div>
+            <div class="plan2"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
+            </div>
+            <div class="plan3"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
+            </div>
+            <div class="plan4"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
+            </div>
+        </section>
 
     </article>
 
+    <div class="espacio-blanco"></div>
+    <div class="espacio-blanco"></div>
+
     <!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
-    <section class="player">        
-        <!--reproductor del navegador-->
-<!--         <audio controls="controls">
-            <source src="track.ogg" type="audio/ogg" />
-            <source src="track.mp3" type="audio/mpeg" />
-        </audio> -->
+    <section class="player"> 
+        <section class="artista">
+            <a href=""><h1>Michael Jackson </h1></a> 
+            <a href=""><p class="span"> - Smooth Criminal</p></a>        
+        </section>
+
+        <section  class="artista">
+
+            <!--reproductor del navegador-->
+            <audio controls="controls" class="barra">
+                <!--<source src="track.ogg" type="audio/ogg" />-->
+                <source src="/audio/Smooth Criminal.mp3" type="audio/mp3" />
+            </audio>
+        </section>
+             
     </section>
 
 </body>
