--- a/TPE5-diazpace_molleker_lucero/html/notificaciones.html
+++ b/TPE5-diazpace_molleker_lucero/html/notificaciones.html
@@ -40,6 +40,7 @@
             </div>
         </form>
     </div>
+    <div class="espacio-blanco"></div>
 
     <section class="player">        
         <!--reproductor del navegador-->
