modificacion de header en las paginas

--- a/TPE5-diazpace_molleker_lucero/html/registrarse.html
+++ b/TPE5-diazpace_molleker_lucero/html/registrarse.html
@@ -13,10 +13,10 @@
         <a href="index.html" class="logo-navigation"></a>
         
         <div class="relleno"></div>
+        <div class="relleno"></div>
+        <div class="relleno"></div>
 
-        <section class="container-links">
-            <a class="links" href="ayuda-inicio.html">Ayuda</a>
-        </section>
+        <a class="links" href="ayuda-inicio.html">Ayuda</a>
     </header>
 
     <!--flecha atras--><a href="index.html"><img class="atras" src="../images/icono_flecha_atras.png"></a>
