--- a/TPE5-diazpace_molleker_lucero/html/ayuda-inicio.html
+++ b/TPE5-diazpace_molleker_lucero/html/ayuda-inicio.html
@@ -14,11 +14,12 @@
     <header class="navegation">
         <a href="home.html" class="logo-navigation"></a>
         <input type="text" placeholder="  Buscar..." class="search">
-        <section class="container-links">
-            <a class="links">Mi Playlist</a>
-            <a class="links" href="mi-cuenta.html">Mi cuenta</a>
-            <a class="links" href="notificaciones.html">Notificaciones</a>
-        </section>
+        
+        <div class="relleno"></div>
+
+        <a class="links" href="playlist.html"><div >Mi Playlist</div></a>
+        <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
+        <a class="links" href="notificaciones.html"><div class="notificacion"></div></a>
     </header>
 
     <div class="ayuda">
