Modifications on playlist page

--- a/TPE5-diazpace_molleker_lucero/html/buscado.html
+++ b/TPE5-diazpace_molleker_lucero/html/buscado.html
@@ -36,7 +36,7 @@
                 <p class="p-info">Hey you - Pink Floyd</p>
                 <p class="p-info">5.3 min</p>
             </section>
-                    <section class="actions">
+                    <section class="actions margin-actions">
                         <div class="action action1"></div>
                         <div class="action action2"></div>
                         <div class="action action3"></div>
@@ -48,7 +48,7 @@
                 <p class="p-info">Café la humedad - Cacho Castaña</p>
                 <p>4.5 min</p>
             </section>
-                    <section class="actions">
+                    <section class="actions margin-actions">
                         <div class="action action1"></div>
                         <div class="action action2"></div>
                         <div class="action action3"></div>
@@ -60,7 +60,7 @@
                 <p class="p-info">I want to be free - Freddy Mercury</p>
                 <p>3.5 min</p>
             </section>
-                    <section class="actions">
+                    <section class="actions margin-actions">
                         <div class="action action1"></div>
                         <div class="action action2"></div>
                         <div class="action action3"></div>
@@ -72,7 +72,7 @@
                 <p class="p-info">Radio gaga - Queen</p>
                 <p>6.1 min</p>
             </section>
-                    <section class="actions">
+                    <section class="actions margin-actions">
                         <div class="action action1"></div>
                         <div class="action action2"></div>
                         <div class="action action3"></div>
@@ -84,7 +84,7 @@
                 <p class="p-info">Beat it - Michael Jackson</p>
                 <p>5.8 min</p>
             </section>
-                    <section class="actions">
+                    <section class="actions margin-actions">
                         <div class="action action1"></div>
                         <div class="action action2"></div>
                         <div class="action action3"></div>
@@ -97,7 +97,7 @@
                     <p class="p-info">Hey you - Pink Floyd</p>
                     <p class="p-info">5.3 min</p>
                 </section>
-                        <section class="actions">
+                        <section class="actions margin-actions">
                             <div class="action action1"></div>
                             <div class="action action2"></div>
                             <div class="action action3"></div>
@@ -109,7 +109,7 @@
                     <p class="p-info">Café la humedad - Cacho Castaña</p>
                     <p>4.5 min</p>
                 </section>
-                        <section class="actions">
+                        <section class="actions margin-actions">
                             <div class="action action1"></div>
                             <div class="action action2"></div>
                             <div class="action action3"></div>
@@ -121,7 +121,7 @@
                     <p class="p-info">I want to be free - Freddy Mercury</p>
                     <p>3.5 min</p>
                 </section>
-                        <section class="actions">
+                        <section class="actions margin-actions">
                             <div class="action action1"></div>
                             <div class="action action2"></div>
                             <div class="action action3"></div>
@@ -133,7 +133,7 @@
                     <p class="p-info">Radio gaga - Queen</p>
                     <p>6.1 min</p>
                 </section>
-                        <section class="actions">
+                        <section class="actions margin-actions">
                             <div class="action action1"></div>
                             <div class="action action2"></div>
                             <div class="action action3"></div>
@@ -145,7 +145,7 @@
                     <p class="p-info">Beat it - Michael Jackson</p>
                     <p>5.8 min</p>
                 </section>
-                        <section class="actions">
+                        <section class="actions margin-actions">
                             <div class="action action1"></div>
                             <div class="action action2"></div>
                             <div class="action action3"></div>
