Added event in playlist page

--- a/TPE5-diazpace_molleker_lucero/html/playlist.html
+++ b/TPE5-diazpace_molleker_lucero/html/playlist.html
@@ -105,9 +105,79 @@
                         </section>
                     </td>
                 </tr>
+                <tr class="fila slide-in-elliptic-top-fwd hiden">
+                    <td class="celda celda-song1"></td>
+                    <td class="celda">Hey you</td>
+                    <td class="celda">Pink Floyd</td>
+                    <td class="celda">Album</td>
+                    <td class="celda">5.3 min</td>
+                    <td class="celda">
+                        <section class="actions">
+                            <div class="action action1"></div>
+                            <div class="action action2"></div>
+                            <div class="action action3"></div>
+                        </section>
+                    </td>
+                </tr>
+                <tr class="fila slide-in-elliptic-top-fwd1 hiden">
+                    <td class="celda celda-song2"></td>
+                    <td class="celda">Café la humedad</td>
+                    <td class="celda">Cacho Castaña</td>
+                    <td class="celda">Album</td>
+                    <td class="celda">4.5 min</td>
+                    <td class="celda">
+                        <section class="actions">
+                            <div class="action action1"></div>
+                            <div class="action action2"></div>
+                            <div class="action action3"></div>
+                        </section>
+                    </td>
+                </tr>
+                <tr class="fila slide-in-elliptic-top-fwd2 hiden">
+                    <td class="celda celda-song3"></td>
+                    <td class="celda">I want to break free</td>
+                    <td class="celda">Freddy Mercury</td>
+                    <td class="celda">Album</td>
+                    <td class="celda">3.5 min</td>
+                    <td class="celda">
+                        <section class="actions">
+                            <div class="action action1"></div>
+                            <div class="action action2"></div>
+                            <div class="action action3"></div>
+                        </section>
+                    </td>
+                </tr>
+                <tr class="fila slide-in-elliptic-top-fwd3 hiden">
+                    <td class="celda celda-song4"></td>
+                    <td class="celda">Radio gaga</td>
+                    <td class="celda">Queen</td>
+                    <td class="celda">Album</td>
+                    <td class="celda">6.1 min</td>
+                    <td class="celda">
+                        <section class="actions">
+                            <div class="action action1"></div>
+                            <div class="action action2"></div>
+                            <div class="action action3"></div>
+                        </section>
+                    </td>
+                </tr>
+                <tr class="fila slide-in-elliptic-top-fwd4 hiden">
+                    <td class="celda celda-song5"></td>
+                    <td class="celda">Beat it</td>
+                    <td class="celda">Michael Jackson</td>
+                    <td class="celda">Album</td>
+                    <td class="celda">5.8 min</td>
+                    <td class="celda">
+                        <section class="actions">
+                            <div class="action action1"></div>
+                            <div class="action action2"></div>
+                            <div class="action action3"></div>
+                        </section>
+                    </td>
+                </tr>
             </tbody>
         </table>
-        <div class="mas-canciones"></div>
+        <div class="mas-canciones2"></div>
         <div class="espacio-blanco"></div>
 
 
