modificacion de headers y pestañas

--- a/TPE5-diazpace_molleker_lucero/html/buscado.html
+++ b/TPE5-diazpace_molleker_lucero/html/buscado.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="shortcut icon" href="../images/logo.ico" type="image/x-icon">
+    <title>Spoiler Five</title>
 </head>
 <body>
     <header class="navegation">
         <div class="logo-navigation"></div>
         <input type="text" placeholder="Buscar..." class="search">
         <div class="lupa"></div>
-        <section class="container-links">
-            <a class="links">Mi Playlist</a>
-            <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
-            <a class="links">Notificaciones</a>
-            <a class="links" href="ayuda.html" >Ayuda</a>
-        </section>
+        
+        <a class="links margen" href="playlist.html"><div >Mi Playlist</div></a>
+        <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
+        <a class="links" href="ayuda.html" >Ayuda</a>
+        <a class="links" href="notificaciones.html"><div class="notificacion"></div></a>
+        
     </header>
     <section class="content">
         <section class="sugerencias">
