--- a/TPE5-diazpace_molleker_lucero/html/playlist.html
+++ b/TPE5-diazpace_molleker_lucero/html/playlist.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../images/logo.ico" type="image/x-icon">
     <title>Spoiler Five</title>
 </head>
 <body>
@@ -13,11 +14,13 @@
 
         <input type="text" placeholder="Buscar..." class="search">
         <div class="lupa"></div>
-        <section class="container-links">
-            <a class="links" href="mi-cuenta.html">Mi cuenta</a>
-            <a class="links" href="mi-cuenta.html"> <div id="notificacion" ></div> </a>
-            <a class="links" href="ayuda.html" >Ayuda</a>
-        </section>
+
+        <div class="margen"></div>
+
+        <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
+        <a class="links" href="ayuda.html" >Ayuda</a>
+        <a class="links" href="notificaciones.html"><div class="notificacion"></div></a>
+        
     </header>
 
     <article class="content">
