--- a/TPE5-diazpace_molleker_lucero/html/cancion.html
+++ b/TPE5-diazpace_molleker_lucero/html/cancion.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../images/logo.ico" type="image/x-icon">
+    
     <title>Spoiler Five</title>
 </head>
 <body>
