--- a/TPE5-diazpace_molleker_lucero/html/opciones-plan.html
+++ b/TPE5-diazpace_molleker_lucero/html/opciones-plan.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../images/logo.ico" type="image/x-icon">
     <title>Spoiler Five</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
