modificacion de header

--- a/TPE5-diazpace_molleker_lucero/html/ayuda-inicio.html
+++ b/TPE5-diazpace_molleker_lucero/html/ayuda-inicio.html
@@ -14,16 +14,10 @@
 <body>
     <header class="navegation">
         <a href="home.html" class="logo-navigation"></a>
-        <input type="text" placeholder="  Buscar..." class="search">
         
-        <div class="relleno"></div>
-
-        <a class="links" href="playlist.html"><div >Mi Playlist</div></a>
-        <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
-        <a class="links" href="notificaciones.html"><div class="notificacion"></div></a>
     </header>
 
-    <div class="ayuda">
+    <section class="ayuda">
     <!--flecha atras--><a href="index.html"><div class="back"></div></a>
 
         <h2 class="tit-plan">¿En qué podemos ayudarte?</h2>
@@ -64,16 +58,13 @@
                 <p class="acordeon__contenido">Spoiler Five te permitirá reproducir tu música favorita. realizando búsquedas de canciones, postcads y playlist.  Además podrás calificarla y realizar comentarios. </p>
             </div>
         </div>
-    </div>
-
-<!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
-    <section class="player">        
-        <!--reproductor del navegador-->
-        <audio controls="controls">
-            <source src="track.ogg" type="audio/ogg" />
-            <source src="track.mp3" type="audio/mpeg" />
-        </audio>
     </section>
+    <div class="espacio-blanco"></div>
+
+    <!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
+    <footer class="contact"> 
+        <section class="social-media"></section>
+    </footer>
     
 </body>
 </html>
