--- a/TPE5-diazpace_molleker_lucero/html/comentarios.html
+++ b/TPE5-diazpace_molleker_lucero/html/comentarios.html
@@ -13,8 +13,9 @@
 </head>
 <body>
     <header class="navegation">
-        <div class="logo-navigation"></div>
+        <a href="home.html"  class="logo-navigation"></a>
         <input type="text" placeholder="  Buscar..." class="search">
+        <div class="lupa"></div>
 
         <a class="links margen" href="playlist.html"><div >Mi Playlist</div></a>
         <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
