ya no recuerdo que acomode aca

--- a/TPE5-diazpace_molleker_lucero/html/ayuda.html
+++ b/TPE5-diazpace_molleker_lucero/html/ayuda.html
@@ -15,8 +15,9 @@
     <header class="navegation">
         <a href="home.html"  class="logo-navigation"></a>
         <input type="text" placeholder="  Buscar..." class="search">
-        
-        <div class="relleno"></div>
+        <a href="buscado.html"><div class="lupa"></div></a>
+
+        <div class="margen"></div>
 
         <a class="links" href="playlist.html"><div >Mi Playlist</div></a>
         <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
