--- a/TPE5-diazpace_molleker_lucero/html/cancion.html
+++ b/TPE5-diazpace_molleker_lucero/html/cancion.html
@@ -15,7 +15,7 @@
     <header class="navegation">
         <a href="home.html" class="logo-navigation"></a>
         <input type="text" placeholder="  Buscar..." class="search">
-        <div class="lupa"></div>
+        <a href="buscado.html"><div class="lupa"></div></a>
 
         <a class="links margen" href="playlist.html"><div >Mi Playlist</div></a>
         <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
