--- a/TPE5-diazpace_molleker_lucero/html/opciones-plan.html
+++ b/TPE5-diazpace_molleker_lucero/html/opciones-plan.html
@@ -13,11 +13,11 @@
     <header class="navegation">
         <a href="home.html" class="logo-navigation"></a>
         <input type="text" placeholder="Buscar..." class="search">
-        <section class="container-links">
-            <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
-            <a class="links" href="notificaciones.html">Notificaciones</a>
-            <a class="links" href="ayuda.html" >Ayuda</a>
-        </section>
+        <a href="buscado.html"><div class="lupa"></div></a>
+
+        <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
+        <a class="links" href="ayuda.html" >Ayuda</a>
+        <a class="links" href="notificaciones.html"><div class="notificacion"></div></a>
     </header>
 
     <article id="opciones">
