--- a/TPE5-diazpace_molleker_lucero/html/playlist.html
+++ b/TPE5-diazpace_molleker_lucero/html/playlist.html
@@ -13,7 +13,7 @@
         <a href="home.html"  class="logo-navigation"></a>
 
         <input type="text" placeholder="Buscar..." class="search">
-        <div class="lupa"></div>
+        <a href="buscado.html"><div class="lupa"></div></a>
 
         <div class="margen"></div>
 
@@ -25,7 +25,9 @@
 
     <article class="content">
         <!-- back--><a href="home.html" class="back"></a>
-        <div class="encabezado"></div>
+        
+         <div class="encabezado"><h1>Playlist seleccionada</h1><div>
+
         <table class="table-playlist">
             <thead>
                 <tr class="fila ">
