agregado player como mockup y reproductor incrustado para simulacion

--- a/TPE5-diazpace_molleker_lucero/html/index.html
+++ b/TPE5-diazpace_molleker_lucero/html/index.html
@@ -46,18 +46,12 @@
             </div>
         </section>
     </article>
-
-    <div class="opciones-login" id="log-list">
-        <a href="inicio-sesion.html"></a><button class="login">Iniciar sesión</button></a>
-        <a href="#opciones"class=""><button class="registrarse">Registrarse</button></a>
-    </div>
-
 <!--
     <footer class="contact"> 
         <section class="social-media">
         </section>
     </footer>
 -->
-
+    <div class="espacio-blanco"></div>
 </body>
 </html>
