--- a/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
+++ b/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
@@ -26,9 +26,9 @@
         <h1>Bienvenido!</h1>
         <form class="flex">
             <label>Ingresa tu usuario</label>
-            <input class="input-login" type="text" placeholder="  Aca va tu usuario" required>
+            <input class="input-login" type="text" placeholder="  Aca va tu usuario"  value="Leo" required>
             <label>Ingresa tu contraseña</label>
-            <input class="input-login" type="password" placeholder="  Pone tu contraseña" required>
+            <input class="input-login" type="password" placeholder="  Pone tu contraseña"  value="123456"required>
             
             <a href="home.html" class="blanco"><button class="btn-form inicio-sesion">Iniciar sesión</a></button>
         </form>
