Corrección de errores

--- a/TPE5-diazpace_molleker_lucero/html/actualizar-plan.html
+++ b/TPE5-diazpace_molleker_lucero/html/actualizar-plan.html
@@ -18,7 +18,7 @@
         <section class="container-links">
             <a class="links">Mi Playlist</a>
             <a class="links" href="notificaciones.html">Notificaciones</a>
-            <a class="links" href="ayuda.html" >Ayuda</a>
+            <a class="links" href="ayuda.html" ><div class="notificacion"></div></a>
         </section>
     </header>
 
