--- a/TPE5-diazpace_molleker_lucero/html/cancion.html
+++ b/TPE5-diazpace_molleker_lucero/html/cancion.html
@@ -57,7 +57,12 @@
             </p>
         </form>   
      </article>
-
+     <div id="lista-comentarios">
+        <h3>Últimas votaciones:</h3>
+        <div class="un-comentario"><p>25/11/2020 - Que buen tema - Juan</p><p>★★★★★</p></div>
+        <div class="un-comentario"><p>25/11/2020 - Lo escucho todo el día - Pedro</p><p>★★★★</p></div>
+        <div class="un-comentario"><p>15/09/2020 - Muy Bueno !! - Luis</p><p>★★★</p></div>
+    </div>
      <div class="espacio-blanco"></div>
 
 
