--- a/TPE5-diazpace_molleker_lucero/html/comentarios.html
+++ b/TPE5-diazpace_molleker_lucero/html/comentarios.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="navegation">
-        <div class="logo-navigation"></div>
+        <a href="home.html" class="logo-navigation"></a>
         <input type="text" placeholder="  Buscar..." class="search">
 
         <a class="links margen" href="playlist.html"><div >Mi Playlist</div></a>
