--- a/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
+++ b/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
@@ -15,11 +15,11 @@
     <header class="navegation">
         <a href="home.html" class="logo-navigation"></a>
         <input type="text" placeholder="  Buscar..." class="search">
-        <section class="container-links">
-            <a class="links">Mi Playlist</a>
-            <a class="links" href="notificaciones.html">Notificaciones</a>
-            <a class="links" href="ayuda.html" >Ayuda</a>
-        </section>
+        <div class="lupa"></div>
+        <div class="relleno"></div>
+        <a class="links" href="playlist.html"><div >Mi Playlist</div></a>
+        <a class="links" href="ayuda.html" >Ayuda</a>
+        <a class="links" href="notificaciones.html"><div class="notificacion"></div></a>
     </header>
 
     <div class="cont-cuenta">
@@ -44,12 +44,21 @@
         </form>
     </div>
     <!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
-    <section class="player">        
-        <!--reproductor del navegador-->
-        <audio controls="controls">
-            <source src="track.ogg" type="audio/ogg" />
-            <source src="track.mp3" type="audio/mpeg" />
-        </audio>
+    <section class="player"> 
+        <section class="artista">
+            <a href=""><h1>Michael Jackson </h1></a> 
+            <a href=""><p class="span"> - Smooth Criminal</p></a>        
+        </section>
+
+        <section  class="artista">
+
+            <!--reproductor del navegador-->
+            <audio controls="controls" class="barra">
+                <!--<source src="track.ogg" type="audio/ogg" />-->
+                <source src="/audio/Smooth Criminal.mp3" type="audio/mp3" />
+            </audio>
+        </section>
+             
     </section>
 
 </body>
