detalles del footer, agregado de puntaje a playlist

--- a/TPE5-diazpace_molleker_lucero/html/opciones-plan.html
+++ b/TPE5-diazpace_molleker_lucero/html/opciones-plan.html
@@ -15,6 +15,8 @@
         <input type="text" placeholder="Buscar..." class="search">
         <a href="buscado.html"><div class="lupa"></div></a>
 
+        <div class="margen"></div>
+
         <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
         <a class="links" href="ayuda.html" >Ayuda</a>
         <a class="links" href="notificaciones.html"><div class="notificacion"></div></a>
@@ -36,7 +38,24 @@
         </section>
     </article>
 
-  
+    <div class="espacio-blanco"></div>
+    <div class="espacio-blanco"></div>
+
+    <section class="pie">
+        <!-- <section class="player"> 
+           <section class="artista">
+                <a href=""><h1>Michael Jackson </h1></a> 
+                <a href=""><p class="span"> - Smooth Criminal</p></a>        
+            </section> 
+        </section>-->
+        <section  class="artista">
+
+            <audio controls="controls" class="barra">
+                <source src="/audio/Smooth Criminal.mp3" type="audio/mp3" />
+            </audio>
+        </section>         
+        
+    </section>
 
 
     
