--- a/TPE5-diazpace_molleker_lucero/html/comentarios.html
+++ b/TPE5-diazpace_molleker_lucero/html/comentarios.html
@@ -48,22 +48,21 @@
     </div>
 
 <!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
-<section class="player"> 
-    <section class="artista">
-        <a href=""><h1>Michael Jackson </h1></a> 
-        <a href=""><p class="span"> - Smooth Criminal</p></a>        
-    </section>
+    <section class="pie">
+        <!-- <section class="player"> 
+        <section class="artista">
+                <a href=""><h1>Michael Jackson </h1></a> 
+                <a href=""><p class="span"> - Smooth Criminal</p></a>        
+            </section> 
+        </section>-->
+        <section  class="artista">
 
-    <section  class="artista">
-
-        <!--reproductor del navegador-->
-        <audio controls="controls" class="barra">
-            <!--<source src="track.ogg" type="audio/ogg" />-->
-            <source src="/audio/Smooth Criminal.mp3" type="audio/mp3" />
-        </audio>
+            <audio controls="controls" class="barra">
+                <source src="/audio/Smooth Criminal.mp3" type="audio/mp3" />
+            </audio>
+        </section>         
+        
     </section>
-         
-</section>
 
 </body>
 </html>
